Fix public-nav menu header padding alignment (#144)
* Update public-nav menu header padding

* Add border-radius for 1st item in dropdown

--- a/src/PublicNavigation/Navigation/Menu/Items/Item/CardDropdown/DropdownItem/DropdownItem.less
+++ b/src/PublicNavigation/Navigation/Menu/Items/Item/CardDropdown/DropdownItem/DropdownItem.less
@@ -17,6 +17,7 @@
   }
 
   &:not(:last-child) .dropdown-content {
+    border-radius: 3px;
     border-bottom: 2px solid @brand-smoke-plus-10;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
