--- a/src/PublicNavigation/Navigation/Menu/Items/Item/Dropdown/Dropdown.less
+++ b/src/PublicNavigation/Navigation/Menu/Items/Item/Dropdown/Dropdown.less
@@ -2,6 +2,8 @@
 
 .tw-public-navigation-menu__dropdown-menu {
   background-color: @brand-smoke-plus-20;
+  padding: 0;
+
   li {
     .dropdown-content {
       padding: 0.5 * @spacer 5 * @spacer;
